--- a/Project.toml
+++ b/Project.toml
@@ -8,6 +8,7 @@ julia = "1.1"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+PrettyPrint = "8162dcfd-2161-5ef2-ae6c-7681170c5f98"
 
 [targets]
-test = ["Test"]
+test = ["Test", "PrettyPrint"]
