--- a/Project.toml
+++ b/Project.toml
@@ -3,12 +3,14 @@ uuid = "01f4d636-c494-49cd-be72-24f3977c0639"
 authors = ["thautawarm"]
 version = "0.1.0"
 
+[deps]
+
 [compat]
 julia = "1.1"
 
 [extras]
-Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 PrettyPrint = "8162dcfd-2161-5ef2-ae6c-7681170c5f98"
+Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
 test = ["Test", "PrettyPrint"]
